# HID

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  control.py  keyboard_hid.c  keyboard_hid.h  main.c  monitor.py  mouse_hid.c  mouse_hid.h  usage.h
hid/: collection_type.h  data_type.h  hid.h  hid_items.h  usage_pages.h
inc/: Arduino-usbserial.h  Descriptors.h  UsbEvents.h  keyboard_hid.h  mouse_hid.h
lib/: arduinoCore.cmake  hid.cmake  lufa.cmake
lib/hid/: upg_buttons.h  upg_desktop.h  upg_keyboard.h  upg_leds.h  usb_descriptors.h
lib/usb/: usb_descriptors.c
peripheral/: CMakeLists.txt
peripheral/src/: main.cpp
src/: Arduino-usbserial.c  Descriptors-copy.c  Descriptors.c  keyboard_hid.c  main.c  main.cpp  main_2.c  mouse_hid.c
toolchain/: arduino.cmake
usb/: usb_descriptors.c  usb_descriptors.h
usb_interface/: CMakeLists.txt
usb_interface/inc/: Descriptors.h  SerialInterface.h  UsbEvents.h
usb_interface/src/: Descriptors.c  SerialInterface.c  UsbEvents.c  main.c
